fixing issues and continued refactor